# mole-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: testing.yml
examples/: CMakeLists.txt
examples/01_basic/: main.cpp
examples/02_custom_class/: main.cpp
examples/03_static_vars/: main.cpp
examples/04_multi_cli/: main.cpp
examples/05_script/: main.cpp
include/cli-brary/: cli.hpp  command.hpp  typing_util.hpp
include/molecli/: caster.hpp  cli.hpp  cli_s.hpp  command.hpp  command_s.hpp  help_message.hpp  molecli.hpp  static_vars.hpp  tokenize.hpp  typing_utils.hpp
scripts/: generate_command_macros.py
src/: cli.cpp  command.cpp  help_message.cpp  test.cpp  tokenize.cpp
tests/: check_leaks.cpp  sample_script.txt  test_caster.cpp  test_cli.cpp  test_cli_s.cpp  test_command.cpp  test_command_s.cpp  test_help_message.cpp  test_scripting.cpp  test_tokenize.cpp
